      checking for non-free licenses.  Mentions here are
      presumably just false-positives.  Thanks to
      Marcelo Jorge Vieira for the report and the initial
      patch.  (Closes: #718575)
  * checks/deb-format.pm:
    + [NT] Apply patch from Guillem Jover to fix a wrong
      tag being emitted on lzma compressed udebs.
      (Closes: #718337)
  * checks/debhelper.{desc,pm}:
    + [NT] Remove tag for dh_pycentral being obsolete.
      Thanks to Luca Falavigna for the report.
    + [BR] Fix false-negative in the brace expansion check
      when the comma was next to one of the braces.
      (Closes: #708381)
  * checks/files.{desc,pm}:
    + [NT] Remove tag for missing dependency on
      python-central.  Thanks to Luca Falavigna for the
      report.  (Closes: #718690)
    + [BR] Rename font-adobe-copyrighted-fragment tags.
      (Closes: #718820)
    + [NT] Fix false positive warning about embedded
      feedparser for python3-feedparser.  Thanks to
      Etienne Millon for the report.  (Closes: #719163)
  * checks/init.d.{desc,pm}:
    + [NT] Revert init.d-script-call-internal-API for now.
      Refer to #710559 for more information.
  * checks/patch-systems.{desc,pm}:
    + [BR] Add tag for DEP-3 template descriptions.
      (Closes: #717633)
  * checks/phppear.{desc,pm}:
    + [NT] Apply patch from Mathieu Parent to fix false
      positive missing-pkg-php-tools-addon.  Thanks to
      Thijs Kinkhorst for the report.  (Closes: #718167)
    + [NT] Apply patch form Mathieu Parent to reduce the
      severity of a "composer package" not using
      pkg-php-tools to wishlist.  Thanks to Thijs
      Kinkhorst for the report.  (Closes: #718862)
    + [NT] Apply patch from Vincent Bernat to downgrade
      severity of not using phppear substvars for
      description and synopsis plus explain that they
      should not be used blindly.  Thanks to Mathieu
      Parent for the review of the patch.
      (Closes: #719788)
  * checks/po-debconf.{desc,pm}: