@@ -1,7 +1,6 @@
 W: debhelper-deprecated source: dh_desktop-is-deprecated line 25
 W: debhelper-deprecated source: dh_installmanpages-is-obsolete line 24
-W: debhelper-deprecated source: dh_pysupport-is-obsolete line 30
-W: debhelper-deprecated source: dh_python-is-obsolete line 27
+W: debhelper-deprecated source: dh_pysupport-is-obsolete line 28
 W: debhelper-deprecated source: dh_scrollkeeper-is-deprecated line 26
-W: debhelper-deprecated source: dh_suidregister-is-obsolete line 40
-W: debhelper-deprecated source: dh_undocumented-is-obsolete line 41
+W: debhelper-deprecated source: dh_suidregister-is-obsolete line 38
+W: debhelper-deprecated source: dh_undocumented-is-obsolete line 39
