@@ -43,8 +43,8 @@ binary-arch:	build
 	dh_installdebconf -pdebconf-test-postinst --noscripts
 	dh_installdebconf -pdebconf-udeb
 
-	# Not needed, but it tests dh_python build dependencies.
-	dh_python -a
+
+
 
 	dh_compress -a
 	dh_fixperms -a
