@@ -35,8 +35,9 @@ lintian (2.5.16) UNRELEASED; urgency=low
       tag being emitted on lzma compressed udebs.
       (Closes: #718337)
   * checks/debhelper.{desc,pm}:
-    + [NT] Remove tag for dh_pycentral being obsolete.
-      Thanks to Luca Falavigna for the report.
+    + [NT] Remove tag for dh_pycentral and dh_python being
+      obsolete.  Thanks to Luca Falavigna for the report.
+      (Closes: #720337)
     + [BR] Fix false-negative in the brace expansion check
       when the comma was next to one of the braces.
       (Closes: #708381)
